update predictions plot keys

--- a/county_quickstart.ipynb
+++ b/county_quickstart.ipynb
@@ -37,6 +37,299 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['countyFIPS',\n",
+       " 'STATEFP',\n",
+       " 'COUNTYFP',\n",
+       " 'CountyName',\n",
+       " 'StateName',\n",
+       " 'State',\n",
+       " 'lat',\n",
+       " 'lon',\n",
+       " 'POP_LATITUDE',\n",
+       " 'POP_LONGITUDE',\n",
+       " 'PopulationEstimate2018',\n",
+       " 'PopTotalMale2017',\n",
+       " 'PopTotalFemale2017',\n",
+       " 'FracMale2017',\n",
+       " 'PopulationEstimate65+2017',\n",
+       " 'PopulationDensityperSqMile2010',\n",
+       " 'CensusPopulation2010',\n",
+       " 'MedianAge2010',\n",
+       " '#EligibleforMedicare2018',\n",
+       " 'MedicareEnrollment,AgedTot2017',\n",
+       " '3-YrDiabetes2015-17',\n",
+       " 'DiabetesPercentage',\n",
+       " 'HeartDiseaseMortality',\n",
+       " 'StrokeMortality',\n",
+       " 'Smokers_Percentage',\n",
+       " 'RespMortalityRate2014',\n",
+       " '#FTEHospitalTotal2017',\n",
+       " \"TotalM.D.'s,TotNon-FedandFed2017\",\n",
+       " '#HospParticipatinginNetwork2017',\n",
+       " '#Hospitals',\n",
+       " '#ICU_beds',\n",
+       " 'dem_to_rep_ratio',\n",
+       " 'PopMale<52010',\n",
+       " 'PopFmle<52010',\n",
+       " 'PopMale5-92010',\n",
+       " 'PopFmle5-92010',\n",
+       " 'PopMale10-142010',\n",
+       " 'PopFmle10-142010',\n",
+       " 'PopMale15-192010',\n",
+       " 'PopFmle15-192010',\n",
+       " 'PopMale20-242010',\n",
+       " 'PopFmle20-242010',\n",
+       " 'PopMale25-292010',\n",
+       " 'PopFmle25-292010',\n",
+       " 'PopMale30-342010',\n",
+       " 'PopFmle30-342010',\n",
+       " 'PopMale35-442010',\n",
+       " 'PopFmle35-442010',\n",
+       " 'PopMale45-542010',\n",
+       " 'PopFmle45-542010',\n",
+       " 'PopMale55-592010',\n",
+       " 'PopFmle55-592010',\n",
+       " 'PopMale60-642010',\n",
+       " 'PopFmle60-642010',\n",
+       " 'PopMale65-742010',\n",
+       " 'PopFmle65-742010',\n",
+       " 'PopMale75-842010',\n",
+       " 'PopFmle75-842010',\n",
+       " 'PopMale>842010',\n",
+       " 'PopFmle>842010',\n",
+       " '3-YrMortalityAge<1Year2015-17',\n",
+       " '3-YrMortalityAge1-4Years2015-17',\n",
+       " '3-YrMortalityAge5-14Years2015-17',\n",
+       " '3-YrMortalityAge15-24Years2015-17',\n",
+       " '3-YrMortalityAge25-34Years2015-17',\n",
+       " '3-YrMortalityAge35-44Years2015-17',\n",
+       " '3-YrMortalityAge45-54Years2015-17',\n",
+       " '3-YrMortalityAge55-64Years2015-17',\n",
+       " '3-YrMortalityAge65-74Years2015-17',\n",
+       " '3-YrMortalityAge75-84Years2015-17',\n",
+       " '3-YrMortalityAge85+Years2015-17',\n",
+       " 'mortality2015-17Estimated',\n",
+       " 'stay at home',\n",
+       " '>50 gatherings',\n",
+       " '>500 gatherings',\n",
+       " 'public schools',\n",
+       " 'restaurant dine-in',\n",
+       " 'entertainment/gym',\n",
+       " 'federal guidelines',\n",
+       " 'foreign travel ban',\n",
+       " '#Cases_01-22-2020',\n",
+       " '#Cases_01-23-2020',\n",
+       " '#Cases_01-24-2020',\n",
+       " '#Cases_01-25-2020',\n",
+       " '#Cases_01-26-2020',\n",
+       " '#Cases_01-27-2020',\n",
+       " '#Cases_01-28-2020',\n",
+       " '#Cases_01-29-2020',\n",
+       " '#Cases_01-30-2020',\n",
+       " '#Cases_01-31-2020',\n",
+       " '#Cases_02-01-2020',\n",
+       " '#Cases_02-02-2020',\n",
+       " '#Cases_02-03-2020',\n",
+       " '#Cases_02-04-2020',\n",
+       " '#Cases_02-05-2020',\n",
+       " '#Cases_02-06-2020',\n",
+       " '#Cases_02-07-2020',\n",
+       " '#Cases_02-08-2020',\n",
+       " '#Cases_02-09-2020',\n",
+       " '#Cases_02-10-2020',\n",
+       " '#Cases_02-11-2020',\n",
+       " '#Cases_02-12-2020',\n",
+       " '#Cases_02-13-2020',\n",
+       " '#Cases_02-14-2020',\n",
+       " '#Cases_02-15-2020',\n",
+       " '#Cases_02-16-2020',\n",
+       " '#Cases_02-17-2020',\n",
+       " '#Cases_02-18-2020',\n",
+       " '#Cases_02-19-2020',\n",
+       " '#Cases_02-20-2020',\n",
+       " '#Cases_02-21-2020',\n",
+       " '#Cases_02-22-2020',\n",
+       " '#Cases_02-23-2020',\n",
+       " '#Cases_02-24-2020',\n",
+       " '#Cases_02-25-2020',\n",
+       " '#Cases_02-26-2020',\n",
+       " '#Cases_02-27-2020',\n",
+       " '#Cases_02-28-2020',\n",
+       " '#Cases_02-29-2020',\n",
+       " '#Cases_03-01-2020',\n",
+       " '#Cases_03-02-2020',\n",
+       " '#Cases_03-03-2020',\n",
+       " '#Cases_03-04-2020',\n",
+       " '#Cases_03-05-2020',\n",
+       " '#Cases_03-06-2020',\n",
+       " '#Cases_03-07-2020',\n",
+       " '#Cases_03-08-2020',\n",
+       " '#Cases_03-09-2020',\n",
+       " '#Cases_03-10-2020',\n",
+       " '#Cases_03-11-2020',\n",
+       " '#Cases_03-12-2020',\n",
+       " '#Cases_03-13-2020',\n",
+       " '#Cases_03-14-2020',\n",
+       " '#Cases_03-15-2020',\n",
+       " '#Cases_03-16-2020',\n",
+       " '#Cases_03-17-2020',\n",
+       " '#Cases_03-18-2020',\n",
+       " '#Cases_03-19-2020',\n",
+       " '#Cases_03-20-2020',\n",
+       " '#Cases_03-21-2020',\n",
+       " '#Cases_03-22-2020',\n",
+       " '#Cases_03-23-2020',\n",
+       " '#Cases_03-24-2020',\n",
+       " '#Cases_03-25-2020',\n",
+       " '#Cases_03-26-2020',\n",
+       " '#Cases_03-27-2020',\n",
+       " '#Cases_03-28-2020',\n",
+       " '#Cases_03-29-2020',\n",
+       " '#Cases_03-30-2020',\n",
+       " '#Cases_03-31-2020',\n",
+       " '#Cases_04-01-2020',\n",
+       " '#Cases_04-02-2020',\n",
+       " '#Cases_04-03-2020',\n",
+       " '#Cases_04-04-2020',\n",
+       " '#Cases_04-05-2020',\n",
+       " '#Cases_04-06-2020',\n",
+       " '#Cases_04-07-2020',\n",
+       " '#Cases_04-08-2020',\n",
+       " '#Cases_04-09-2020',\n",
+       " '#Cases_04-10-2020',\n",
+       " '#Cases_04-11-2020',\n",
+       " '#Cases_04-12-2020',\n",
+       " '#Cases_04-13-2020',\n",
+       " '#Cases_04-14-2020',\n",
+       " '#Cases_04-15-2020',\n",
+       " '#Deaths_01-22-2020',\n",
+       " '#Deaths_01-23-2020',\n",
+       " '#Deaths_01-24-2020',\n",
+       " '#Deaths_01-25-2020',\n",
+       " '#Deaths_01-26-2020',\n",
+       " '#Deaths_01-27-2020',\n",
+       " '#Deaths_01-28-2020',\n",
+       " '#Deaths_01-29-2020',\n",
+       " '#Deaths_01-30-2020',\n",
+       " '#Deaths_01-31-2020',\n",
+       " '#Deaths_02-01-2020',\n",
+       " '#Deaths_02-02-2020',\n",
+       " '#Deaths_02-03-2020',\n",
+       " '#Deaths_02-04-2020',\n",
+       " '#Deaths_02-05-2020',\n",
+       " '#Deaths_02-06-2020',\n",
+       " '#Deaths_02-07-2020',\n",
+       " '#Deaths_02-08-2020',\n",
+       " '#Deaths_02-09-2020',\n",
+       " '#Deaths_02-10-2020',\n",
+       " '#Deaths_02-11-2020',\n",
+       " '#Deaths_02-12-2020',\n",
+       " '#Deaths_02-13-2020',\n",
+       " '#Deaths_02-14-2020',\n",
+       " '#Deaths_02-15-2020',\n",
+       " '#Deaths_02-16-2020',\n",
+       " '#Deaths_02-17-2020',\n",
+       " '#Deaths_02-18-2020',\n",
+       " '#Deaths_02-19-2020',\n",
+       " '#Deaths_02-20-2020',\n",
+       " '#Deaths_02-21-2020',\n",
+       " '#Deaths_02-22-2020',\n",
+       " '#Deaths_02-23-2020',\n",
+       " '#Deaths_02-24-2020',\n",
+       " '#Deaths_02-25-2020',\n",
+       " '#Deaths_02-26-2020',\n",
+       " '#Deaths_02-27-2020',\n",
+       " '#Deaths_02-28-2020',\n",
+       " '#Deaths_02-29-2020',\n",
+       " '#Deaths_03-01-2020',\n",
+       " '#Deaths_03-02-2020',\n",
+       " '#Deaths_03-03-2020',\n",
+       " '#Deaths_03-04-2020',\n",
+       " '#Deaths_03-05-2020',\n",
+       " '#Deaths_03-06-2020',\n",
+       " '#Deaths_03-07-2020',\n",
+       " '#Deaths_03-08-2020',\n",
+       " '#Deaths_03-09-2020',\n",
+       " '#Deaths_03-10-2020',\n",
+       " '#Deaths_03-11-2020',\n",
+       " '#Deaths_03-12-2020',\n",
+       " '#Deaths_03-13-2020',\n",
+       " '#Deaths_03-14-2020',\n",
+       " '#Deaths_03-15-2020',\n",
+       " '#Deaths_03-16-2020',\n",
+       " '#Deaths_03-17-2020',\n",
+       " '#Deaths_03-18-2020',\n",
+       " '#Deaths_03-19-2020',\n",
+       " '#Deaths_03-20-2020',\n",
+       " '#Deaths_03-21-2020',\n",
+       " '#Deaths_03-22-2020',\n",
+       " '#Deaths_03-23-2020',\n",
+       " '#Deaths_03-24-2020',\n",
+       " '#Deaths_03-25-2020',\n",
+       " '#Deaths_03-26-2020',\n",
+       " '#Deaths_03-27-2020',\n",
+       " '#Deaths_03-28-2020',\n",
+       " '#Deaths_03-29-2020',\n",
+       " '#Deaths_03-30-2020',\n",
+       " '#Deaths_03-31-2020',\n",
+       " '#Deaths_04-01-2020',\n",
+       " '#Deaths_04-02-2020',\n",
+       " '#Deaths_04-03-2020',\n",
+       " '#Deaths_04-04-2020',\n",
+       " '#Deaths_04-05-2020',\n",
+       " '#Deaths_04-06-2020',\n",
+       " '#Deaths_04-07-2020',\n",
+       " '#Deaths_04-08-2020',\n",
+       " '#Deaths_04-09-2020',\n",
+       " '#Deaths_04-10-2020',\n",
+       " '#Deaths_04-11-2020',\n",
+       " '#Deaths_04-12-2020',\n",
+       " '#Deaths_04-13-2020',\n",
+       " '#Deaths_04-14-2020',\n",
+       " '#Deaths_04-15-2020',\n",
+       " 'deaths',\n",
+       " 'cases',\n",
+       " 'tot_deaths',\n",
+       " 'tot_cases',\n",
+       " 'neighbor_deaths',\n",
+       " 'neighbor_cases',\n",
+       " 'y_preds_0',\n",
+       " 'y_preds_1',\n",
+       " 'Predicted Deaths 1-day',\n",
+       " 'Predicted Deaths 2-day',\n",
+       " 'Predicted Deaths 3-day',\n",
+       " 'Predicted Deaths 4-day',\n",
+       " 'Predicted Deaths 5-day',\n",
+       " 'Predicted Deaths 6-day',\n",
+       " 'Predicted Deaths 7-day',\n",
+       " 'Predicted Cases 1-day',\n",
+       " 'Predicted Cases 2-day',\n",
+       " 'Predicted Cases 3-day',\n",
+       " 'Predicted Cases 4-day',\n",
+       " 'Predicted Cases 5-day',\n",
+       " 'Predicted Cases 6-day',\n",
+       " 'Predicted Cases 7-day',\n",
+       " 'tot_deaths_per_capita',\n",
+       " 'tot_cases_per_capita']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(df.keys())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
