--- a/county_quickstart.ipynb
+++ b/county_quickstart.ipynb
@@ -360,6 +360,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# analyze predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_days_in_past = 3\n",
+    "output_key = f'Predicted Deaths {num_days_in_past}-day'   \n",
+    "\n",
+    "today = datetime.today().strftime(\"%B %d\")\n",
+    "plt.figure(dpi=500)\n",
+    "day_past = (datetime.now() - timedelta(days=3)).strftime(\"%B %d\")\n",
+    "plt.plot([0, max(df_county[output_key])], [0, max(df_county[output_key])], \n",
+    "         '--', color='gray')\n",
+    "plt.plot(df_county['tot_deaths'], \n",
+    "         df_county[output_key], '.')\n",
+    "\n",
+    "plt.xlabel(f'Actual deaths by {today}')\n",
+    "plt.ylabel(f'Predicted deaths by {today}\\n(predicted on {day_past})')\n",
+    "plt.xscale('log')\n",
+    "plt.yscale('log')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# interactive plots"
    ]
   },
