per cap, rural eda, and matching

--- a/modeling/rural_county_eda.ipynb
+++ b/modeling/rural_county_eda.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('../') \n",
@@ -50,12 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "aggregate_by_state = False\n",
-    "outcome_type = 'deaths'"
+    "outcome_type = 'deaths_per_cap'"
    ]
   },
   {
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -184,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,11 +406,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.loc[df['Rural-UrbanContinuumCode2013'] > 3]"
+    "# df = df.loc[df['Rural-UrbanContinuumCode2013'] > 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neigh_cases_two_weeks = []\n",
+    "neigh_cases = list(df['neighbor_cases'])\n",
+    "for n_cases in neigh_cases:    \n",
+    "    neigh_cases_two_weeks.append(n_cases[-14])\n",
+    "df['max_neigh_cases_minus_two_weeks'] = neigh_cases_two_weeks\n",
+    "    \n",
+    "neigh_cases_two_weeks = []\n",
+    "neigh_cases = list(df['neighbor_deaths'])\n",
+    "for n_cases in neigh_cases:    \n",
+    "    neigh_cases_two_weeks.append(n_cases[-14])\n",
+    "df['max_neigh_deaths_minus_two_weeks'] = neigh_cases_two_weeks\n",
+    "\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "important_vars.extend(['max_cases_minus_two_weeks',\n",
+    "                       'max_deaths_minus_two_weeks',\n",
+    "                       'max_death_per_cap_minus_2_weeks_3_day_growth',\n",
+    "                       'max_death_per_cap_minus_2_weeks_7_day_growth',\n",
+    "                       'max_death_per_cap_minus_2_weeks_5_day_growth',\n",
+    "                       'max_death_per_cap_minus_2_weeks',\n",
+    "                       'max_death_per_cap',\n",
+    "                       'max_neigh_deaths_minus_two_weeks',\n",
+    "                       'max_neigh_cases_minus_two_weeks'                    \n",
+    "                      ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CensusRegionName\n",
+      "Northeast\n",
+      "<class 'str'>\n",
+      "---\n",
+      "CensusDivisionName\n",
+      "Middle Atlantic\n",
+      "<class 'str'>\n",
+      "---\n",
+      "('max_death_per_cap', 1.0)\n",
+      "('max_death_per_cap_minus_2_weeks', 0.9146834741587111)\n",
+      "('max_death_per_cap_minus_2_weeks_7_day_growth', 0.8161473283645381)\n",
+      "('max_death_per_cap_minus_2_weeks_5_day_growth', 0.7731940744817426)\n",
+      "('max_death_per_cap_minus_2_weeks_3_day_growth', 0.6788706611605058)\n",
+      "('max_neigh_cases_minus_two_weeks', 0.563201420613491)\n",
+      "('max_neigh_deaths_minus_two_weeks', 0.5418505277293375)\n",
+      "('max_cases_minus_two_weeks', 0.5290905928912911)\n",
+      "('max_deaths_minus_two_weeks', 0.5041288171463087)\n",
+      "('PopulationDensityperSqMile2010', 0.34592775737341197)\n",
+      "('dem_to_rep_ratio', 0.24222406038435254)\n",
+      "(\"TotalM.D.'s,TotNon-FedandFed2017\", 0.2302702652169476)\n",
+      "('3-YrMortalityAge85+Years2015-17', 0.22861611130114406)\n",
+      "('3-YrMortalityAge45-54Years2015-17', 0.2251223954171379)\n",
+      "('#EligibleforMedicare2018', 0.21604235214848408)\n",
+      "('PopulationEstimate65+2017', 0.2157567760149938)\n",
+      "('3-YrMortalityAge75-84Years2015-17', 0.21385038378727578)\n",
+      "('3-YrMortalityAge25-34Years2015-17', 0.21320268321340144)\n",
+      "('MedicareEnrollment,AgedTot2017', 0.21249212938800324)\n",
+      "('3-YrMortalityAge35-44Years2015-17', 0.20909253357907612)\n",
+      "('#FTEHospitalTotal2017', 0.20849643360302786)\n",
+      "('CensusPopulation2010', 0.20610969542170363)\n",
+      "('3-YrDiabetes2015-17', 0.20494907136752985)\n",
+      "('PopTotalFemale2017', 0.20373903131554488)\n",
+      "('3-YrMortalityAge65-74Years2015-17', 0.1995238551796961)\n",
+      "('PopulationEstimate2018', 0.19695324996099486)\n",
+      "('PopTotalMale2017', 0.19618822486893822)\n",
+      "('3-YrMortalityAge55-64Years2015-17', 0.1953463538637512)\n",
+      "('Rural-UrbanContinuumCode2013', 0.18079674595906084)\n",
+      "('#HospParticipatinginNetwork2017', 0.1797835665039103)\n",
+      "('#ICU_beds', 0.17125545911592482)\n",
+      "('>50 gatherings', 0.14717897432810795)\n",
+      "('3-YrMortalityAge15-24Years2015-17', 0.1441927482944391)\n",
+      "('#Hospitals', 0.14417554630227475)\n",
+      "('RespMortalityRate2014', 0.12329835041992428)\n",
+      "('3-YrMortalityAge<1Year2015-17', 0.12047057631431123)\n",
+      "('entertainment/gym', 0.11486570953998552)\n",
+      "('stay at home', 0.10066915615134085)\n",
+      "('restaurant dine-in', 0.10045069383796144)\n",
+      "('FracMale2017', 0.09932008653731456)\n",
+      "('>500 gatherings', 0.09266439050387926)\n",
+      "('MedianAge2010', 0.08945194496426088)\n",
+      "('mortality2015-17Estimated', 0.06849179954525791)\n",
+      "('3-YrMortalityAge5-14Years2015-17', 0.06187417861716054)\n",
+      "('public schools', 0.06165058078220077)\n",
+      "('3-YrMortalityAge1-4Years2015-17', 0.04012916340952484)\n",
+      "('DiabetesPercentage', 0.03563704168356712)\n",
+      "('HeartDiseaseMortality', 0.03543180256339971)\n",
+      "('StrokeMortality', 0.030789702171989754)\n",
+      "('Smokers_Percentage', 0.0005894830613856263)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "from numbers import Number\n",
+    "numerics = ['int16', 'int32', 'int64', 'float16', 'float32', 'float64']\n",
+    "\n",
+    "query_col = 'max_death_per_cap'\n",
+    "\n",
+    "corrs = Counter()\n",
+    "for v in important_vars:\n",
+    "    if not isinstance(list(df[v])[0], Number):\n",
+    "        print(v)\n",
+    "        print(list(df[v])[0])\n",
+    "        print(type(list(df[v])[0]))\n",
+    "        print('---')\n",
+    "    elif 'PopF' in v or 'PopM' in v:\n",
+    "        0\n",
+    "    else:\n",
+    "        if not np.isnan(np.abs(df[query_col].corr(df[v]))):\n",
+    "            corrs[v] = float(np.abs(df[query_col].corr(df[v])))\n",
+    "#             corrs[v] = float(df[query_col].corr(df[v]))\n",
+    "\n",
+    "    \n",
+    "for val in corrs.most_common():\n",
+    "    print(val)\n",
+    "\n",
+    "# print(corrs.most_common())"
    ]
   },
   {
@@ -409,219 +556,6 @@
    "metadata": {},
    "source": [
     "## Find neighbors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#EligibleforMedicare2018\n",
-      "#FTEHospitalTotal2017\n",
-      "#HospParticipatinginNetwork2017\n",
-      "#Hospitals\n",
-      "#ICU_beds\n",
-      "#Cases_01-22-2020\n",
-      "#Cases_01-23-2020\n",
-      "#Cases_01-24-2020\n",
-      "#Cases_01-25-2020\n",
-      "#Cases_01-26-2020\n",
-      "#Cases_01-27-2020\n",
-      "#Cases_01-28-2020\n",
-      "#Cases_01-29-2020\n",
-      "#Cases_01-30-2020\n",
-      "#Cases_01-31-2020\n",
-      "#Cases_02-01-2020\n",
-      "#Cases_02-02-2020\n",
-      "#Cases_02-03-2020\n",
-      "#Cases_02-04-2020\n",
-      "#Cases_02-05-2020\n",
-      "#Cases_02-06-2020\n",
-      "#Cases_02-07-2020\n",
-      "#Cases_02-08-2020\n",
-      "#Cases_02-09-2020\n",
-      "#Cases_02-10-2020\n",
-      "#Cases_02-11-2020\n",
-      "#Cases_02-12-2020\n",
-      "#Cases_02-13-2020\n",
-      "#Cases_02-14-2020\n",
-      "#Cases_02-15-2020\n",
-      "#Cases_02-16-2020\n",
-      "#Cases_02-17-2020\n",
-      "#Cases_02-18-2020\n",
-      "#Cases_02-19-2020\n",
-      "#Cases_02-20-2020\n",
-      "#Cases_02-21-2020\n",
-      "#Cases_02-22-2020\n",
-      "#Cases_02-23-2020\n",
-      "#Cases_02-24-2020\n",
-      "#Cases_02-25-2020\n",
-      "#Cases_02-26-2020\n",
-      "#Cases_02-27-2020\n",
-      "#Cases_02-28-2020\n",
-      "#Cases_02-29-2020\n",
-      "#Cases_03-01-2020\n",
-      "#Cases_03-02-2020\n",
-      "#Cases_03-03-2020\n",
-      "#Cases_03-04-2020\n",
-      "#Cases_03-05-2020\n",
-      "#Cases_03-06-2020\n",
-      "#Cases_03-07-2020\n",
-      "#Cases_03-08-2020\n",
-      "#Cases_03-09-2020\n",
-      "#Cases_03-10-2020\n",
-      "#Cases_03-11-2020\n",
-      "#Cases_03-12-2020\n",
-      "#Cases_03-13-2020\n",
-      "#Cases_03-14-2020\n",
-      "#Cases_03-15-2020\n",
-      "#Cases_03-16-2020\n",
-      "#Cases_03-17-2020\n",
-      "#Cases_03-18-2020\n",
-      "#Cases_03-19-2020\n",
-      "#Cases_03-20-2020\n",
-      "#Cases_03-21-2020\n",
-      "#Cases_03-22-2020\n",
-      "#Cases_03-23-2020\n",
-      "#Cases_03-24-2020\n",
-      "#Cases_03-25-2020\n",
-      "#Cases_03-26-2020\n",
-      "#Cases_03-27-2020\n",
-      "#Cases_03-28-2020\n",
-      "#Cases_03-29-2020\n",
-      "#Cases_03-30-2020\n",
-      "#Cases_03-31-2020\n",
-      "#Cases_04-01-2020\n",
-      "#Cases_04-02-2020\n",
-      "#Cases_04-03-2020\n",
-      "#Cases_04-04-2020\n",
-      "#Cases_04-05-2020\n",
-      "#Cases_04-06-2020\n",
-      "#Cases_04-07-2020\n",
-      "#Cases_04-08-2020\n",
-      "#Cases_04-09-2020\n",
-      "#Cases_04-10-2020\n",
-      "#Cases_04-11-2020\n",
-      "#Cases_04-12-2020\n",
-      "#Cases_04-13-2020\n",
-      "#Cases_04-14-2020\n",
-      "#Cases_04-15-2020\n",
-      "#Cases_04-16-2020\n",
-      "#Cases_04-17-2020\n",
-      "#Cases_04-18-2020\n",
-      "#Cases_04-19-2020\n",
-      "#Cases_04-20-2020\n",
-      "#Cases_04-21-2020\n",
-      "#Cases_04-22-2020\n",
-      "#Cases_04-23-2020\n",
-      "#Cases_04-24-2020\n",
-      "#Cases_04-25-2020\n",
-      "#Deaths_01-22-2020\n",
-      "#Deaths_01-23-2020\n",
-      "#Deaths_01-24-2020\n",
-      "#Deaths_01-25-2020\n",
-      "#Deaths_01-26-2020\n",
-      "#Deaths_01-27-2020\n",
-      "#Deaths_01-28-2020\n",
-      "#Deaths_01-29-2020\n",
-      "#Deaths_01-30-2020\n",
-      "#Deaths_01-31-2020\n",
-      "#Deaths_02-01-2020\n",
-      "#Deaths_02-02-2020\n",
-      "#Deaths_02-03-2020\n",
-      "#Deaths_02-04-2020\n",
-      "#Deaths_02-05-2020\n",
-      "#Deaths_02-06-2020\n",
-      "#Deaths_02-07-2020\n",
-      "#Deaths_02-08-2020\n",
-      "#Deaths_02-09-2020\n",
-      "#Deaths_02-10-2020\n",
-      "#Deaths_02-11-2020\n",
-      "#Deaths_02-12-2020\n",
-      "#Deaths_02-13-2020\n",
-      "#Deaths_02-14-2020\n",
-      "#Deaths_02-15-2020\n",
-      "#Deaths_02-16-2020\n",
-      "#Deaths_02-17-2020\n",
-      "#Deaths_02-18-2020\n",
-      "#Deaths_02-19-2020\n",
-      "#Deaths_02-20-2020\n",
-      "#Deaths_02-21-2020\n",
-      "#Deaths_02-22-2020\n",
-      "#Deaths_02-23-2020\n",
-      "#Deaths_02-24-2020\n",
-      "#Deaths_02-25-2020\n",
-      "#Deaths_02-26-2020\n",
-      "#Deaths_02-27-2020\n",
-      "#Deaths_02-28-2020\n",
-      "#Deaths_02-29-2020\n",
-      "#Deaths_03-01-2020\n",
-      "#Deaths_03-02-2020\n",
-      "#Deaths_03-03-2020\n",
-      "#Deaths_03-04-2020\n",
-      "#Deaths_03-05-2020\n",
-      "#Deaths_03-06-2020\n",
-      "#Deaths_03-07-2020\n",
-      "#Deaths_03-08-2020\n",
-      "#Deaths_03-09-2020\n",
-      "#Deaths_03-10-2020\n",
-      "#Deaths_03-11-2020\n",
-      "#Deaths_03-12-2020\n",
-      "#Deaths_03-13-2020\n",
-      "#Deaths_03-14-2020\n",
-      "#Deaths_03-15-2020\n",
-      "#Deaths_03-16-2020\n",
-      "#Deaths_03-17-2020\n",
-      "#Deaths_03-18-2020\n",
-      "#Deaths_03-19-2020\n",
-      "#Deaths_03-20-2020\n",
-      "#Deaths_03-21-2020\n",
-      "#Deaths_03-22-2020\n",
-      "#Deaths_03-23-2020\n",
-      "#Deaths_03-24-2020\n",
-      "#Deaths_03-25-2020\n",
-      "#Deaths_03-26-2020\n",
-      "#Deaths_03-27-2020\n",
-      "#Deaths_03-28-2020\n",
-      "#Deaths_03-29-2020\n",
-      "#Deaths_03-30-2020\n",
-      "#Deaths_03-31-2020\n",
-      "#Deaths_04-01-2020\n",
-      "#Deaths_04-02-2020\n",
-      "#Deaths_04-03-2020\n",
-      "#Deaths_04-04-2020\n",
-      "#Deaths_04-05-2020\n",
-      "#Deaths_04-06-2020\n",
-      "#Deaths_04-07-2020\n",
-      "#Deaths_04-08-2020\n",
-      "#Deaths_04-09-2020\n",
-      "#Deaths_04-10-2020\n",
-      "#Deaths_04-11-2020\n",
-      "#Deaths_04-12-2020\n",
-      "#Deaths_04-13-2020\n",
-      "#Deaths_04-14-2020\n",
-      "#Deaths_04-15-2020\n",
-      "#Deaths_04-16-2020\n",
-      "#Deaths_04-17-2020\n",
-      "#Deaths_04-18-2020\n",
-      "#Deaths_04-19-2020\n",
-      "#Deaths_04-20-2020\n",
-      "#Deaths_04-21-2020\n",
-      "#Deaths_04-22-2020\n",
-      "#Deaths_04-23-2020\n",
-      "#Deaths_04-24-2020\n",
-      "#Deaths_04-25-2020\n"
-     ]
-    }
-   ],
-   "source": [
-    "for c in df.columns:\n",
-    "    if '#' in c:\n",
-    "        print(c)"
    ]
   },
   {
@@ -905,82 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def plot_matched_counties(df,indices,time_dif = False, plot_preds = False):\n",
-    "#     \"\"\"\n",
-    "#     Plots model predictions vs actual\n",
-    "#     row: dataframe row\n",
-    "#     window: autoregressive window size\n",
-    "#     \"\"\"\n",
-    "#     outcome = outcome_type\n",
-    "    \n",
-    "#     if time_dif:\n",
-    "#         time_inds = []\n",
-    "#         for ind in indices:\n",
-    "#             t = find_time_match(indices[0],ind,-14,outcome=outcome)\n",
-    "#             time_inds.append(t)\n",
-    "    \n",
-    "    \n",
-    "#     outcomes = list(df[outcome_type])\n",
-    "#     counties = list(df['CountyName'])\n",
-    "#     states = list(df['StateName'])\n",
-    "#     if time_dif:\n",
-    "#         print(time_inds)\n",
-    "#     for i in range(len(indices)):\n",
-    "# #         county_vals = outcomes[indices[i]][times[i]:]\n",
-    "#         if time_dif:\n",
-    "#             print(len(outcomes[indices[i]][time_inds[i]:]))\n",
-    "#             print('-----------------=============-----------')\n",
-    "#             county_vals = outcomes[indices[i]][time_inds[i]:]\n",
-    "#         else:\n",
-    "#             county_vals = outcomes[indices[i]][-14:]\n",
-    "#         sns.lineplot(list(range(len(county_vals))),county_vals, label=counties[indices[i]]+' '+states[indices[i]])\n",
-    "\n",
-    "#     avg_neighbors = np.array(len(ounty_vals = outcomes[indices[0]][time_inds[0]:]))\n",
-    "#     for i in range(1,len(indices)):\n",
-    "        \n",
-    "#         county_vals = outcomes[indices[i]][time_inds[i]:]\n",
-    "#         avg_neighbors += county_vals[:len(avg_neighbors)]\n",
-    "#     avg_neighbors = avg_neighbors/(len(indices)-1)\n",
-    "#     sns.lineplot(list(range(len(avg_neighbors))),avg_neighbors, label='avg neighbor')\n",
-    "    \n",
-    "\n",
-    "        \n",
-    "#     if plot_preds:\n",
-    "#         preds = list(df['predicted_al'])[indices[0]]\n",
-    "\n",
-    "#         sns.scatterplot(list(range(len(county_vals)))[-len(preds):],preds,label='pred')\n",
-    "\n",
-    "#     plt.ylabel(outcome_type)\n",
-    "#     plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
-    "#     plt.figure(dpi=500)    \n",
-    "#     plt.show()\n",
-    "    \n",
-    "#     total_difs = 0\n",
-    "#     for t in range(1,15):\n",
-    "#         vals = []\n",
-    "#         for i in range(len(indices)):\n",
-    "#             vals.append(outcomes[indices[i]][-t])\n",
-    "#         avg_val = np.mean(vals)\n",
-    "#         val_difs = np.sum([np.abs(v-avg_val) for v in vals])\n",
-    "#         total_difs += val_difs\n",
-    "#     pred_difs = 0 \n",
-    "    \n",
-    "#     if plot_preds:\n",
-    "#         for t in range(1,15):\n",
-    "#              pred_difs += np.abs(preds[-t] - outcomes[indices[0]][-t])\n",
-    "#     if not plot_preds:\n",
-    "#         pred_difs = 0\n",
-    "#     return total_difs, pred_difs\n",
-    "             "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,9 +934,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 108,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
