update usafacts and nytimes data

--- a/modeling/IHME/03_mepi_ihme.ipynb
+++ b/modeling/IHME/03_mepi_ihme.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../../') "
+    "sys.path.append('../../')"
    ]
   },
   {
@@ -1176,12 +1176,13 @@
     "        mepi_ub =  np.zeros_like(cover)\n",
     "        \n",
     "        \n",
-    "        ihme_del =np.array((np.asarray(new_df.iloc[idx].model_upper) - np.asarray(new_df.iloc[idx].model_lower)) /  (1.+np.asarray(new_df.iloc[idx].model_deaths)), dtype=float) \n",
+    "        ihme_del =np.array((np.asarray(new_df.iloc[idx].model_upper) - np.asarray(new_df.iloc[idx].model_lower)) /  (1.+np.asarray(new_df.iloc[idx].ihme_deaths)), dtype=float) \n",
     "        delta = np.array(np.asarray(new_df.iloc[idx].ihme_deaths) /  (1.+np.asarray(new_df.iloc[idx].model_deaths)), dtype=float) -1.\n",
-    "        norm_del = np.power(1.1, np.arange(0, len(delta)))\n",
+    "#         norm_del = np.power(1.1, np.arange(0, len(delta)))\n",
     "        \n",
-    "        del_max = pd.Series(np.abs(delta)/norm_del).rolling(w).max().shift(shift)\n",
-    "        del_max *= pd.Series(np.power(1.1, np.arange(0, len(delta)))).shift(shift)\n",
+    "        del_max = pd.Series(np.abs(delta)).rolling(w).max().shift(shift)\n",
+    "#         del_max = pd.Series(np.abs(delta)/norm_del).rolling(w).max().shift(shift)\n",
+    "#         del_max *= pd.Series(np.power(1.1, np.arange(0, len(delta)))).shift(shift)\n",
     "        \n",
     "        del_pos = pd.Series(delta).rolling(w).max().shift(shift)  # can not use today's error\n",
     "        del_neg = pd.Series(delta).rolling(w).min().shift(shift)  # can not use today's error\n",
